<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_appointment"
            android:icon="@drawable/ic_add_circle_black_24dp"
            android:title="@string/menu_appointment"
            android:visible="false" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/menu_history"
            android:visible="false" />
        <item
            android:id="@+id/nav_commission_calculator"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="@string/menu_commission_calculator"
            android:visible="false" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/menu_schedule"
            android:visible="false" />


    </group>

    <item android:title="Management">
        <menu>
            <item
                android:id="@+id/nav_authentication"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/menu_authentication" />
            <!--<item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="Log in" />-->

        </menu>
    </item>

</menu>
