<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textView1"
                android:text="STEP 3 - Update Record"
                android:textSize="20sp"
                android:textColor="#404040"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/text_record_detail"
                android:hint="NO RECORD"
                android:background="@drawable/bg_round"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="#FFFFFF"
                android:padding="8dp"
                android:textIsSelectable="true"
                android:autoLink="all"/>

            <TextView
                android:id="@+id/textView2"
                android:text="Services :"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <CheckBox
                android:id="@+id/c1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c1"
                android:checked="true"/>

            <CheckBox
                android:id="@+id/c2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c2"/>

            <CheckBox
                android:id="@+id/c3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c3" />
            <CheckBox
                android:id="@+id/c4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c4" />

            <TextView
                android:id="@+id/textView3"
                android:text="\nWorker In-Charge :"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />
            <Spinner
                android:id="@+id/spinnerWorker"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:entries="@array/worker_arrays"
                android:popupBackground="#cccccc" />
            <TextView
                android:id="@+id/textView4"
                android:text="Status :"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />
            <Spinner
                android:id="@+id/spinnerStatus"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:entries="@array/status_arrays"
                android:popupBackground="#cccccc" />
            <Button
                android:id="@+id/updateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="UPDATE"/>



        </LinearLayout>
    </ScrollView>

</LinearLayout>